--- a/mStat2/Homework 5.ipynb
+++ b/mStat2/Homework 5.ipynb
@@ -23,7 +23,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "13.4 In a famous sociological study called Middletown, Lynd and Lynd (1956) administered questionnaires to 784 white high school students. The students were\n",
+    "##13.4 \n",
+    "In a famous sociological study called Middletown, Lynd and Lynd (1956) administered questionnaires to 784 white high school students. The students were\n",
     "asked which two of ten given attributes were most desirable in their fathers. The\n",
     "following table shows how the desirability of the attribute “being a college graduate” was rated by male and female students. Did the males and females value\n",
     "this attribute differently?\n",
@@ -122,7 +123,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "13.11 (a) Derive the likelihood ratio test of homogeneity. \n",
+    "##13.11 \n",
+    "\n",
+    "(a) Derive the likelihood ratio test of homogeneity. \n",
     "\n",
     "<b>From chapter 9, the derivation of the likelihood ratio test for Multinomial Distributions is as follows:</b>\n",
     "\n",
@@ -236,7 +239,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "14.4 Consider a standard linear regression model in which the freshman GPA is modeled to depend linearly on high school GPA: $Y_i = β_0 + β_1 x_i + e_i$ , i = 1, 2 . . . , n.\n",
+    "##14.4 \n",
+    "\n",
+    "Consider a standard linear regression model in which the freshman GPA is modeled to depend linearly on high school GPA: $Y_i = β_0 + β_1 x_i + e_i$ , i = 1, 2 . . . , n.\n",
     "Suppose that different intercepts were to be allowed for females and males, and\n",
     "write the model as\n",
     "\n",
@@ -244,40 +249,115 @@
     "\n",
     "where $I_F (i)$ and $I_M (i)$ are indicator variables taking on values 0 and 1 according\n",
     "to whether the gender of the ith person is female or male. Give the form of the\n",
-    "design matrix for such a model."
+    "design matrix for such a model.\n",
+    "\n",
+    "<b>According to Wikipedia:\n",
+    "\n",
+    "In a regression model, written in matrix-vector form as\n",
+    "\n",
+    "$$y=X\\beta+ \\epsilon$$\n",
+    "\n",
+    "the matrix X is the design matrix, while y is the vector of observations on the dependent variable, $\\beta$ is a vector of response coefficients (one for each explanatory variable) and $\\epsilon$ is a vector containing the values of the model's error term for the various observations. In the design matrix, each column is a vector of observations on one of the explanatory variables.\n",
+    "\n",
+    "Therefore,</b>\n",
+    "\n",
+    "$$X = \\left[ \\begin{matrix}I_F(1)\\ ~ I_M(1) \\ ~ x_1 \\\\ I_F(2) ~ \\ I_M(2) ~ \\ x_2\\\\ \\vdots ~~~~~~ \\ \\vdots ~~~~~~ \\ \\vdots \\\\ I_F(n) ~ \\ I_M(n) \\ ~ x_n  \\end{matrix} \\right]$$\n",
+    "\n",
+    "."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "14.20 Assume that the columns of $X, X_1 , . . . , X_p$ , are orthogonal; that is, $X_i^T X_j = 0$,\n",
+    "##14.20 \n",
+    "\n",
+    "Assume that the columns of $X, X_1 , . . . , X_p$ , are orthogonal; that is, $X_i^T X_j = 0$,\n",
     "for i = j. Show that the covariance matrix of the least squares estimates is\n",
-    "diagonal."
+    "diagonal.\n",
+    "\n",
+    "<b>Under the assumption that the errors have mean zero and are uncorrelated with\n",
+    "constant variance $σ^2$ , the covariance matrix of the least squares estimate $\\hat{β}$ is\n",
+    "\n",
+    "$$\\Sigma_{\\hat{β} \\hat{ β}}= σ^2 (X^T X)^{−1}$$\n",
+    "\n",
+    "Here, it should be clear that $X^T X = \\mathbb{I}$, and the inverse of the identity is the identity itself. Therefore,\n",
+    "\n",
+    "$$\\Sigma_{\\hat{β} \\hat{ β}}= σ^2 \\mathbb{I}$$\n",
+    "</b>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "14.23 Suppose that grades on a midterm and a final have a correlation coefficient of .5\n",
+    "##14.23 \n",
+    "Suppose that grades on a midterm and a final have a correlation coefficient of .5\n",
     "and both exams have an average score of 75 and a standard deviation of 10.\n",
     "\n",
-    "a. If a student’s score on the midterm is 95, what would you predict his score on\n",
-    "the final to be?\n",
+    "<b>\n",
     "\n",
+    "$$0.5 = \\hat{β}_1 \\sqrt{\\frac {s_{x x}}{s_{yy}}} = \\hat{β}_1$$\n",
+    "\n",
+    "$$\\rightarrow ~~~~ \\hat{Y} = 75 + 0.5*(\\text{old score} - 75)$$\n",
+    "\n",
+    "</b>\n",
+    "\n",
+    "a. If a student’s score on the midterm is 95, what would you predict his score on\n",
+    "the final to be?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "85.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "75 + 0.5*(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "b. If a student scored 85 on the final, what would you guess that her score on the\n",
     "midterm was?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "75 + 0.5*10"
+   ]
   }
  ],
  "metadata": {
